# sokoban

./: .gitignore  Help.md  Install.md  Jira.md  README.md  TODO.md  Test.md  my-project.cabal  run.sh  sokoban.cabal  stack.yaml
app/: Main.hs
data/: badMap1.txt
src/: Const.hs  Editor.hs  GameBox.hs  Handle.hs  Interface.hs  Lib.hs  Printer.hs  Render.hs  Types.hs  Window.hs
test/: GameBoxSpec.hs  MotionSpec.hs  WinGameSpec.hs
