name:                sokoban
version:             0.1
-- synopsis:
-- description:
-- homepage:
-- license:
-- license-file:
author:              Vladislav Grubov
maintainer:          vladgrubov@gmail.com
copyright:           2017 Vladislav Grubov
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall -fno-warn-type-defaults
  exposed-modules:     Lib, Printer, Types
  build-depends:       base >= 4.7 && < 5
                     , gloss >= 1
  default-language:    Haskell2010

executable sokoban
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , sokoban
                     , gloss
  default-language:    Haskell2010

test-suite sokoban-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , sokoban
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

